// cargo-release: next header goes here (do not change this line)

== Unreleased changes (release date TBD)

https://github.com/oxidecomputer/typify/compare/v0.0.10\...HEAD[Full list of commits]

* Allow per-type renames and derive macro applications (#131)
* `ToString` implementations for untagged enums with trivial newtype variants (#145)
* Fixed an issue with generation of enum defaults (#137)

== 0.0.10 (released 2022-09-10)

https://github.com/oxidecomputer/typify/compare/v0.0.9\...v0.0.10[Full list of commits]

* Add support for string types with `format` set to `ip`, `ipv4`, or `ipv6` (#76)
* Be more accommodating in the face of a missing `type` field #(79)
* The order of derives on types has stabilized (and therefore has changed) (#81)
* Specific `From` and `Deserialize` implementations for constrainted string types (#81)
* Specific `From` implementation for untagged enums with constrained string variants (#81)
* `FromStr` implementation for simple-variant-only `enum`s (#81)
* Ignore unknown `format` values (#81)
* Added `regress` dependency for ECMA 262 style regexes (#81)
* Dropshot produces a complex `Null` type (by necessity); now rendered as `()` (#83)
* Fixed rendering of enums with a single variant (#87)
* Updated public interface (breaking for consumers) (#98)
* Optional builder interface for generated structs (#98)

== 0.0.9 (released 2022-06-20)

https://github.com/oxidecomputer/typify/compare/v0.0.8\...v0.0.9[Full list of commits]

* Switched from `unicode-xid` to `unicode-ident` (#60)
* Elevate `TypeDetail::String` rather than `TypeDetail::BuiltIn("String")` (#72)

== 0.0.8 (released 2022-05-22)

https://github.com/oxidecomputer/typify/compare/v0.0.7\...v0.0.8[Full list of commits]

* Support for integer schemas with `enum_values` populated (breaking change) (#57)
* Deeper inspection of `oneOf` constructions to make better `enum`s (#59)
* Simple handling for "constraint" `allOf` constructions (#59)